examples/good/06-NestedReturn.tms
void main() {
  
  int x = 0;

  if (x == 0) {
    while (x > -1) {
      printInt(x);
      if (x == 3) {
        return;
      }
      x++;
    }
  }
}