examples/bad/07-BadReferencePass2.tms
void x(int x, int @ y) {
  return;
}

int y() {
  return 3;
}

void main() {

  int i = 0;
  x(1, i + y());
  
  return;
}